# advent

./: .example.env  Cargo.toml  go.mod  go.sum  main.go
cmd/: d1.go  main.go
eyre_test/: Cargo.toml
eyre_test/src/: lib.rs
input/21/: 21.txt
internal/days24/: d01.go  d01_test.go  d02.go  d02_test.go  d03.go  d03_test.go  d04.go  d04_test.go  d05.go  d05_test.go  d06.go  d06_test.go  d07.go  d07_test.go  d08.go  d08_test.go  d09.go  d09_test.go  d10.go  d10_test.go  d11.go  d11_test.go  d12.go  d12_test.go  d13.go  d13_test.go  d14.go  d14_test.go  d15.go  d15_test.go  d16.go  d16_test.go  d17.go  d17_test.go  d18.go  d18_test.go  d19.go  d19_test.go  d20.go  d20_test.go  (+22 more)
internal/utils/: template.go  utils.go
src/: d1.rs  d2.rs  d3.rs  d4.rs  d5.rs  lib.rs  main.rs  template.rs  template.txt  trace.rs  tracing.rs
src/days/: d1.rs  d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  mod.rs  template.rs
src/days21/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d21.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs
src/days22/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  d26.rs  d27.rs  d28.rs  d29.rs  d30.rs  d31.rs  mod.rs
src/days23/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  (+10 more)
(+17 files in other folders)
