[package]
name = "advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.7"
eyre-test = { path = "eyre_test" }
tracing = "0.1.13"
tracing-subscriber = "0.2.5"
tracing-error = "0.1.2"
