[package]
name = "advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre-test = { path = "eyre_test" }
itertools = "0.10.5"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-error = "0.2.0"
phf = { version = "0.11.1", features = ["macros"] }
reqwest = { version = "0.11.13", features = ["blocking"] }
dotenv = "0.15.0"
liquid = "0.26.9"
